<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding_margin_x"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        android:background="@color/white"
        android:text="@string/profile_edit_bio_title"
        android:textColor="@color/cinder"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding_margin_x"
        android:layout_marginTop="@dimen/default_padding_margin"
        android:layout_marginEnd="@dimen/default_padding_margin_x"
        android:background="@color/white"
        android:text="@string/profile_edit_bio_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputBio"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding_margin_x"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        android:layout_marginEnd="@dimen/default_padding_margin_x"
        android:layout_marginBottom="@dimen/default_padding_margin_x"
        android:hint="@string/profile_edit_new_username"
        android:paddingStart="@dimen/default_padding_margin_small_x"
        android:paddingEnd="@dimen/default_padding_margin_small_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubtitle">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editBio"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLength="180"
            android:minLines="6"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/buttonCancelBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding_margin_x"
        android:text="@string/label_batal"
        android:textAllCaps="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonChangeBio"
        app:layout_constraintTop_toBottomOf="@id/textInputBio" />

    <TextView
        android:id="@+id/buttonChangeBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding_margin_x"
        android:text="@string/label_ganti"
        android:textAllCaps="true"
        android:textColor="@color/color_button"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputBio" />

</androidx.constraintlayout.widget.ConstraintLayout>