<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/layoutNewPassword"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".ui.intro.game.SelectGameFragment">

  <include layout="@layout/toolbar" />

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
      android:id="@+id/imageNewPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      app:srcCompat="@drawable/ic_forgot_password" />

    <TextView
      android:id="@+id/textTitleNewPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/imageNewPassword"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="10dp"
      android:gravity="center"
      android:text="@string/new_password_title_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layoutPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/default_padding_margin_h"
      android:background="@drawable/password_dialog_background"
      android:visibility="gone"
      app:layout_constraintStart_toStartOf="parent">

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitlePassword"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_padding_margin_x"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        android:layout_marginEnd="@dimen/default_padding_margin_x"
        android:text="@string/register_password_dialog_title"
        android:textColor="@color/cinder"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textUppercase"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_padding_margin_x"
        android:layout_marginTop="@dimen/default_padding_margin_x"
        android:layout_marginEnd="@dimen/default_padding_margin_x"
        android:drawableStart="@drawable/ic_uncheck"
        android:drawablePadding="@dimen/default_padding_margin"
        android:text="@string/register_password_uppercase_dialog_title"
        android:textColor="@color/dustyGray"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitlePassword" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textSpecialChar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_padding_margin_x"
        android:layout_marginTop="@dimen/default_padding_margin"
        android:layout_marginEnd="@dimen/default_padding_margin_x"
        android:drawableStart="@drawable/ic_uncheck"
        android:drawablePadding="@dimen/default_padding_margin"
        android:text="@string/register_password_special_case_dialog_title"
        android:visibility="gone"
        android:textColor="@color/dustyGray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUppercase" />

      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textMinPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_padding_margin_x"
        android:layout_marginTop="@dimen/default_padding_margin"
        android:layout_marginEnd="@dimen/default_padding_margin_x"
        android:layout_marginBottom="@dimen/default_padding_margin_x"
        android:drawableStart="@drawable/ic_uncheck"
        android:drawablePadding="@dimen/default_padding_margin"
        android:paddingBottom="@dimen/default_padding_margin_x"
        android:text="@string/register_password_min_dialog_title"
        android:textColor="@color/dustyGray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSpecialChar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/imageGatePassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/default_padding_margin_xx"
      android:visibility="gone"
      app:layout_constraintStart_toStartOf="@id/layoutPassword"
      app:layout_constraintTop_toBottomOf="@id/layoutPassword"
      app:srcCompat="@drawable/ic_triangle_down" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textInputNewPassword"
      style="@style/TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textTitleNewPassword"
      android:layout_marginTop="50dp"
      android:hint="@string/new_password_hint"
      android:paddingStart="@dimen/default_padding_margin_small_x"
      android:paddingEnd="@dimen/default_padding_margin_small_x"
      app:errorIconDrawable="@null"
      app:passwordToggleEnabled="true"
      app:startIconDrawable="@drawable/ic_key">

      <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editNewPassword"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textInputConfirmNewPassword"
      style="@style/TextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textInputNewPassword"
      android:layout_marginTop="10dp"
      android:hint="@string/confirm_new_password_hint"
      android:paddingStart="@dimen/default_padding_margin_small_x"
      android:paddingEnd="@dimen/default_padding_margin_small_x"
      app:errorIconDrawable="@null"
      app:passwordToggleEnabled="true"
      app:startIconDrawable="@drawable/ic_key">

      <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editConfirmNewPassword"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
      android:id="@+id/layoutBottomNewPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      tools:targetApi="lollipop">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/color_button_inactive"
        android:text="@string/password_change_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:targetApi="lollipop" />

    </RelativeLayout>
  </RelativeLayout>
</LinearLayout>