<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/default_padding_margin"
  android:layout_margin="@dimen/default_padding_margin_h"
  android:background="@drawable/background_error_layout">

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/textTitle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/default_padding_margin_x"
    android:layout_marginTop="@dimen/default_padding_margin_x"
    android:layout_marginEnd="@dimen/default_padding_margin_x"
    android:drawableStart="@drawable/ic_warning_red"
    android:gravity="center"
    android:text="@string/conn_unknown_error_message_indo"
    android:textAlignment="textStart"
    android:textColor="@color/cinder"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/textCaption"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/default_padding_margin_x"
    android:layout_marginTop="@dimen/default_padding_margin"
    android:layout_marginEnd="@dimen/default_padding_margin_x"
    android:text="@string/conn_unknown_error_message_caption_indo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textTitle" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/buttonConfirm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/confirm_label"
    android:textSize="18sp"
    android:textColor="@color/color_button"
    android:paddingStart="@dimen/default_padding_margin_xh"
    android:paddingEnd="@dimen/default_padding_margin_xh"
    android:layout_marginBottom="@dimen/default_padding_margin"
    android:layout_marginTop="@dimen/default_padding_margin_xh"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textCaption"
    app:strokeColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>